--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ header p {
 
 /* Profile image */
 header img {
-    width: 150px;
-    height: 150px;
+    width: 200px; /* Increased size */
+    height: 200px; /* Increased size */
     border-radius: 50%;
     border: 4px solid #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
