--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,10 @@ section {
     font-weight: bold;
 }
 
+.skills p strong {
+    font-weight: bold;
+}
+
 /* Responsive Design */
 @media screen and (max-width: 768px) {
     #notable-projects {
@@ -227,6 +231,12 @@ footer {
     padding: 10px 0;
     margin-top: 20px;
 }
+
+.small-text {
+    font-size: 12px; /* Adjust to your desired font size */
+    color: #FFFFFF; /* Optional: make it a lighter color for subtlety */
+}
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
